		on transfer link was not showing.
		* Fixed amuleweb template processing, Reload List button was
		not beeing translated.
		* Small adjusts to ObsessionAl patch to include CVS date in
		about box.
		* Fixed a bug in UTF82unicode(), reported by Mr Faber.
		* Got rid of sscanf in NetworkFunctions.h. This has caused a
		crash once, reported by Mr Faber.

	volpol
		* Patch to fix use of deprecated functions in wxGTK-2.5.3.

	Special Thanks To:
		* Bug and feature reporters:
		rommel
		Mr Faber

--------------------------------------------------------------------------------

Version 2.0.0rc8 - The "last rc" version.
----------
2004-12-21

	Baz:
		* Fix for server stats for users/files not being updated correctly.
		* Fix for ERROR and WARNING server messages not being shown.
		* Fixed server / transfers window splitters not being loaded/saved correctly.
		* Fixed categories on search dialog not being refreshed on category name change.

	deltaHF: 
		* Show comments for shared files

	Hetfield:
		* Some fix in new Tray system and desktopMode bypass

	Jacobo221:
		* Added option to select the max and min size-type in advanced
		  searches.
		* When "Extended Parameters" in Search tab is not selected, 
		  defaults are used.
		* Now "Auto-update serverlist at startup" checks if there's a 
		  serverlist to avoid annoying messages at startup.
		* "Clear completed downloads" is now disabled while no
		  completed downloads are listed.
		* Context menu for download items only enables relevant
		  information now.
		* Context menu little optimization (removed an unuseful loop)
		  and Open File fix.
		* Added bitmap button wich pops-up the last status log line
		  (useful when it doesn't fit the window).
		* Merged Preview and Open File and enabled Open File.
		* New Port column in Servers tab (splitting IP column).
		* Moved "Always filter bad IPs" from Server to Security
		  in Preferences.
		* Changed "Preference" in servers tab as suggested by Sir and